--- a/classwork/Resaurant/Contact Us.html
+++ b/classwork/Resaurant/Contact Us.html
@@ -50,16 +50,21 @@
     </head>
 
     <body>
-      <header>
-          <h1>The Restaurant</h1>
-          <h2 class="font-italic">Best Korean BBQ</h2>
-          <h3 class="text-right mt-5">The Street, London</h3>
-      </header>
+      <div class="wrapper" id="page" style="z-index:2">
+        <header class="section parallax bg1">
+          <div class="darken-pseudo darken-with-text fill">
+            <div style="padding-top:300px; padding-left:10%;">
+              <h1>The Restaurant</h1>
+              <h2>Best Korean BBQ</h2>
+            </div>
+          </div>
+        </header>
 
-        <nav>
-          <a class = "btn fas fa-home" href="Home.html" id = "Home" style = "font-size:24px" ></a>
-          <a class = "btn" href="Menu.html" id = "Menu"> Menu </a>
-          <a class = "btn" href="Contact Us.html" id = "Contact Us" style = "background-color:#3C78AB"> Contact Us </a>
+
+        <nav id="navbar" >
+          <a class = "btn fas fa-home" href="Home.html" id = "home" ></a>
+          <a class = "btn fas fa-utensils" href="Menu.html" id = "menu"> </a>
+          <a class = "btn fas fa-comment-dots" href="Contact Us.html" id = "contact"></a>
           <div class = "clear-float"></div>
         </nav>
 
@@ -168,10 +173,18 @@
         </div>
 
 
-        <footer>
-          <h3> The street, London, UK, SE1 00A </h3>
-          <p> 020 555 1234 </p>
-        </footer>
+        <div class="section parallax bg3">
+            <div class="darken-pseudo darken-with-text fill" class="relative">
+                <div class="fix_bottom">
+                  <h3> The street, London, UK, SE1 00A </h3>
+                  <p> 020 555 1234 </p>
+              </div>
+            </div>
+
+        </div>
+
+      </div>
+
 
         <script src="scripts\contact_form.js"></script>
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
@@ -180,5 +193,99 @@
         <noscript>
             alert("You have javascript disabled. This will effect your viewing experience.");
         </noscript>
+        <script>
+          document.querySelector('.wrapper').addEventListener('scroll',myFunction);
+          window.addEventListener('resize', resize);
+
+          var navbar = document.getElementById("navbar");
+          var howto1 = document.getElementById("howto1");
+          var howto2 = document.getElementById("howto2");
+          var howto3 = document.getElementById("howto3");
+          var howto4 = document.getElementById("howto4");
+          var page = document.getElementById("page");
+          var boat = document.getElementById("boat");
+          var near = document.getElementById("near");
+          var middle = document.getElementById("middle");
+          var far = document.getElementById("far");
+          var cloud1 = document.getElementById("cloud1");
+          var cloud2 = document.getElementById("cloud2");
+
+          var $foo = $("#page");
+          navbar.style.width = $foo.prop("clientWidth")+"px";
+
+          function resize() {
+            $foo = $("#page");
+            navbar.style.width = $foo.prop("clientWidth")+"px";
+          }
+
+          function myFunction() {
+
+            var windowTop = page.scrollTop;
+
+            if (page.scrollTop  >= 530) {
+              navbar.classList.add("sticky");
+              navbar.style.top = (page.scrollTop)+"px";
+            } else {
+              navbar.classList.remove("sticky");
+              navbar.style.top = 530 +"px";
+            }
+            if (page.scrollTop <= 3430){
+              if (page.scrollTop  >= 1530) {
+                howto1.style.top = (page.scrollTop + 90)+"px";
+              } else {
+                howto1.style.top = 1620 + "px";
+              }
+
+              if (page.scrollTop  >= 2130) {
+                howto2.style.top = (page.scrollTop + 90)+"px";
+              } else {
+                howto2.style.top = 2220 + "px";
+              }
+
+              if (page.scrollTop  >= 2730) {
+                howto3.style.top = (page.scrollTop + 90)+"px";
+              } else {
+                howto3.style.top = 2820 + "px";
+              }
+
+              if (page.scrollTop  >= 3330){
+                howto4.style.top = (page.scrollTop + 90)+"px";
+              } else {
+                howto4.style.top = 3420 + "px";
+              }
+            }
+
+            function scroll1 (){
+              page.scrollTo({top: 1530,  behavior: 'smooth'});
+            }
+            function scroll2 (){
+              page.scrollTo({top: 2130,  behavior: 'smooth'});
+            }
+            function scroll3 (){
+              page.scrollTo({top: 2730,  behavior: 'smooth'});
+            }
+            function scroll4 (){
+              page.scrollTo({top: 3330,  behavior: 'smooth'});
+            }
+            howto1.addEventListener("click", scroll1);
+            howto2.addEventListener("click", scroll2);
+            howto3.addEventListener("click", scroll3);
+            howto4.addEventListener("click", scroll4);
+
+            var leftboat = windowTop - 300;
+            boat.style.left= leftboat+"px";
+            near.style.left= -((windowTop*0.4)%40)+"px";
+            middle.style.left= -((windowTop*0.2)%40)+"px";
+            far.style.left= -((windowTop*0.1)%40)+"px";
+
+            cloud1.style.right= ((windowTop*0.1)-300)+"px";
+            cloud2.style.right= (-(windowTop*0.2)-1000)+"px";
+
+
+
+          }
+
+
+        </script>
     </body>
 </html>
